--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-DB_HOST=localhost
+DB_HOST="postgres"
 DB_PORT=5432
-DB_USER=postgres
-DB_PASS=admin123
-DB_NAME=todoTest
+DB_USER="your_user"
+DB_PASS="your_password"
+DB_NAME="taskmanager"
+SECRET_KEY="your-secret-key"
