--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosqlite==0.21.0
 alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.6.0
@@ -6,12 +7,15 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.7
 colorama==0.4.6
+coverage==7.8.2
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.0
 greenlet==3.1.1
-h11==0.14.0
+h11==0.16.0
+httpcore==1.0.9
 httptools==0.6.4
+httpx==0.27.2
 idna==3.10
 iniconfig==2.0.0
 Mako==1.3.8
@@ -24,6 +28,8 @@ pydantic-settings==2.7.1
 pydantic_core==2.27.2
 PyJWT==2.10.1
 pytest==8.3.4
+pytest-asyncio==1.0.0
+pytest-cov==6.1.1
 python-dotenv==1.0.1
 python-multipart==0.0.12
 PyYAML==6.0.2
