--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.0
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
